# python-intermediate-inflammation

./: .gitignore  .pylintrc  LICENSE  README.md  inflammation_analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
inflammation/: models.py
tests/: test_models.py
